# soft_playground

./: .gitignore  LICENSE  README.md  mem_read.cpp  memory_allocation.cpp  str2double.cpp  templates_compile_time.cpp
all_characters_in_range/: Makefile  common.hpp  if_else.cpp  lutFunctor.cpp  lutGlobal.cpp  lutStaticLocal.cpp  switch_case.cpp  test
card_collecting_sim/: README.md  player_stats  run  sim.cpp  single_player.cpp  stats
coroutines/: Makefile  generator_example.cpp
cpp/type_aware_dispatch/: BinaryMsg.hpp  CMakeLists.txt  Dispatcher.hpp  Handler.hpp  Msgs.hpp  main.cpp
cpp/type_aware_dispatch/Msgs/: Msg1.hpp
cpp/type_aware_dispatch_manual/: CMakeLists.txt  Dispatcher.hpp  MyDispatcher.cpp  main.cpp
named_paramter_cpp11/: Makefile  boost_named_parameter.cpp  boost_named_parameter_wiki.cpp  bug-workaround.cpp  bug.cpp  param_passing-rvalue-macros.cpp  param_passing-rvalue.cpp  param_passing-simple.cpp  var_templ.cpp
openscad_svg_frame/: frame.scad
rp2040_blinking/src/: CMakeLists.txt  blink.cpp
rp2040_examples/src/: CMakeLists.txt  blink.cpp  cpp_btle.cpp  cpp_json_format.cpp  cpp_serial.cpp  pwm_dual_servo.cpp
rp2040_examples/src/nlohmann/: README.md
str2double/: .gitignore  str2double.cpp
type_aware_dispatch/: extract_measurements  generate_measurements
type_aware_dispatch/automatic/: CMakeLists.txt  Dispatcher.hpp  Msgs.hpp  main.cpp
type_aware_dispatch/manual/: CMakeLists.txt  MyDispatcher.hpp  sendAll.hpp
vector_vs_list_cpp11_style/: Makefile  template.gpl  vector_vs_list.cpp
